versions/0.25.3/_sources/refs/_aws-cdk_aws-budgets.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"zeZEJmwsWgOxg+OehplDzWrQyGv6sgKQmO3djugAyAw="}

@aws-cdk/aws-budgets
====================

.. mdinclude:: ./__aws-cdk_aws-budgets.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.Budgets/0.25.3>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.Budgets" Version="0.25.3" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.Budgets --version 0.25.3

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.Budgets" version="0.25.3" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/budgets/0.25.3/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:budgets:jar:0.25.3'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="budgets" rev="0.25.3"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>budgets</artifactId>
           <version>0.25.3</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:budgets:0.25.3'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='budgets', version='0.25.3')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-budgets/v/0.25.3>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-budgets@0.25.3

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-budgets": "^0.25.3"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-budgets@0.25.3


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-budgets/v/0.25.3>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-budgets@0.25.3

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-budgets": "^0.25.3"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-budgets@0.25.3



.. py:module:: @aws-cdk/aws-budgets

CfnBudget
^^^^^^^^^

.. py:class:: CfnBudget(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Budgets;

      .. code-tab:: java

         import software.amazon.awscdk.services.budgets.CfnBudget;

      .. code-tab:: javascript

         const { CfnBudget } = require('@aws-cdk/aws-budgets');

      .. code-tab:: typescript

         import { CfnBudget } from '@aws-cdk/aws-budgets';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-budgets.CfnBudgetProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: budgetName

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-budgets.CfnBudgetProps`\  *(readonly)*

   .. py:class:: BudgetDataProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.BudgetDataProperty;

         .. code-tab:: javascript

            // CfnBudget.BudgetDataProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.BudgetDataProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: budgetType

         ``CfnBudget.BudgetDataProperty.BudgetType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-budgettype


         :type: string


      .. py:attribute:: timeUnit

         ``CfnBudget.BudgetDataProperty.TimeUnit``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-timeunit


         :type: string


      .. py:attribute:: budgetLimit

         ``CfnBudget.BudgetDataProperty.BudgetLimit``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-budgetlimit


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.SpendProperty`\  *(optional)*


      .. py:attribute:: budgetName

         ``CfnBudget.BudgetDataProperty.BudgetName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-budgetname


         :type: string *(optional)*


      .. py:attribute:: costFilters

         ``CfnBudget.BudgetDataProperty.CostFilters``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-costfilters


         :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: costTypes

         ``CfnBudget.BudgetDataProperty.CostTypes``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-costtypes


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.CostTypesProperty`\  *(optional)*


      .. py:attribute:: timePeriod

         ``CfnBudget.BudgetDataProperty.TimePeriod``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-timeperiod


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.TimePeriodProperty`\  *(optional)*


   .. py:class:: CostTypesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.CostTypesProperty;

         .. code-tab:: javascript

            // CfnBudget.CostTypesProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.CostTypesProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: includeCredit

         ``CfnBudget.CostTypesProperty.IncludeCredit``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includecredit


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: includeDiscount

         ``CfnBudget.CostTypesProperty.IncludeDiscount``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includediscount


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: includeOtherSubscription

         ``CfnBudget.CostTypesProperty.IncludeOtherSubscription``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includeothersubscription


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: includeRecurring

         ``CfnBudget.CostTypesProperty.IncludeRecurring``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includerecurring


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: includeRefund

         ``CfnBudget.CostTypesProperty.IncludeRefund``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includerefund


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: includeSubscription

         ``CfnBudget.CostTypesProperty.IncludeSubscription``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includesubscription


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: includeSupport

         ``CfnBudget.CostTypesProperty.IncludeSupport``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includesupport


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: includeTax

         ``CfnBudget.CostTypesProperty.IncludeTax``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includetax


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: includeUpfront

         ``CfnBudget.CostTypesProperty.IncludeUpfront``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includeupfront


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: useAmortized

         ``CfnBudget.CostTypesProperty.UseAmortized``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-useamortized


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: useBlended

         ``CfnBudget.CostTypesProperty.UseBlended``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-useblended


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:class:: NotificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.NotificationProperty;

         .. code-tab:: javascript

            // CfnBudget.NotificationProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.NotificationProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: comparisonOperator

         ``CfnBudget.NotificationProperty.ComparisonOperator``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notification.html#cfn-budgets-budget-notification-comparisonoperator


         :type: string


      .. py:attribute:: notificationType

         ``CfnBudget.NotificationProperty.NotificationType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notification.html#cfn-budgets-budget-notification-notificationtype


         :type: string


      .. py:attribute:: threshold

         ``CfnBudget.NotificationProperty.Threshold``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notification.html#cfn-budgets-budget-notification-threshold


         :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


      .. py:attribute:: thresholdType

         ``CfnBudget.NotificationProperty.ThresholdType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notification.html#cfn-budgets-budget-notification-thresholdtype


         :type: string *(optional)*


   .. py:class:: NotificationWithSubscribersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.NotificationWithSubscribersProperty;

         .. code-tab:: javascript

            // CfnBudget.NotificationWithSubscribersProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.NotificationWithSubscribersProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: notification

         ``CfnBudget.NotificationWithSubscribersProperty.Notification``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notificationwithsubscribers.html#cfn-budgets-budget-notificationwithsubscribers-notification


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.NotificationProperty`\ 


      .. py:attribute:: subscribers

         ``CfnBudget.NotificationWithSubscribersProperty.Subscribers``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notificationwithsubscribers.html#cfn-budgets-budget-notificationwithsubscribers-subscribers


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.SubscriberProperty`\ )[]


   .. py:class:: SpendProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.SpendProperty;

         .. code-tab:: javascript

            // CfnBudget.SpendProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.SpendProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: amount

         ``CfnBudget.SpendProperty.Amount``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-spend.html#cfn-budgets-budget-spend-amount


         :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


      .. py:attribute:: unit

         ``CfnBudget.SpendProperty.Unit``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-spend.html#cfn-budgets-budget-spend-unit


         :type: string


   .. py:class:: SubscriberProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.SubscriberProperty;

         .. code-tab:: javascript

            // CfnBudget.SubscriberProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.SubscriberProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: address

         ``CfnBudget.SubscriberProperty.Address``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-subscriber.html#cfn-budgets-budget-subscriber-address


         :type: string


      .. py:attribute:: subscriptionType

         ``CfnBudget.SubscriberProperty.SubscriptionType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-subscriber.html#cfn-budgets-budget-subscriber-subscriptiontype


         :type: string


   .. py:class:: TimePeriodProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.TimePeriodProperty;

         .. code-tab:: javascript

            // CfnBudget.TimePeriodProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.TimePeriodProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: end

         ``CfnBudget.TimePeriodProperty.End``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-timeperiod.html#cfn-budgets-budget-timeperiod-end


         :type: string *(optional)*


      .. py:attribute:: start

         ``CfnBudget.TimePeriodProperty.Start``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-timeperiod.html#cfn-budgets-budget-timeperiod-start


         :type: string *(optional)*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.Resource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


CfnBudgetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnBudgetProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Budgets;

      .. code-tab:: java

         import software.amazon.awscdk.services.budgets.CfnBudgetProps;

      .. code-tab:: javascript

         // CfnBudgetProps is an interface

      .. code-tab:: typescript

         import { CfnBudgetProps } from '@aws-cdk/aws-budgets';





   .. py:attribute:: budget

      ``AWS::Budgets::Budget.Budget``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-budgets-budget.html#cfn-budgets-budget-budget


      :type: :py:class:`~@aws-cdk/aws-budgets.CfnBudget.BudgetDataProperty`\  or :py:class:`@aws-cdk/cdk.Token`\ 


   .. py:attribute:: notificationsWithSubscribers

      ``AWS::Budgets::Budget.NotificationsWithSubscribers``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-budgets-budget.html#cfn-budgets-budget-notificationswithsubscribers


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.NotificationWithSubscribersProperty`\ )[] *(optional)*


