versions/0.27.0/_sources/refs/_aws-cdk_aws-budgets.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"d4+/rcgnUuvsB9/JqP8Ss9Cjf2HGEO/qiJtMWwzZ8/8="}

@aws-cdk/aws-budgets
====================

.. mdinclude:: ./__aws-cdk_aws-budgets.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.Budgets/0.27.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.Budgets" Version="0.27.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.Budgets --version 0.27.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.Budgets" version="0.27.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/budgets/0.27.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:budgets:jar:0.27.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="budgets" rev="0.27.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>budgets</artifactId>
           <version>0.27.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:budgets:0.27.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='budgets', version='0.27.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-budgets/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-budgets@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-budgets": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-budgets@0.27.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-budgets/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-budgets@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-budgets": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-budgets@0.27.0



.. py:module:: @aws-cdk/aws-budgets

CfnBudget
^^^^^^^^^

.. py:class:: CfnBudget(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Budgets;

      .. code-tab:: java

         import software.amazon.awscdk.services.budgets.CfnBudget;

      .. code-tab:: javascript

         const { CfnBudget } = require('@aws-cdk/aws-budgets');

      .. code-tab:: typescript

         import { CfnBudget } from '@aws-cdk/aws-budgets';



   A CloudFormation `AWS::Budgets::Budget`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-budgets.CfnBudgetProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: budgetName

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-budgets.CfnBudgetProps`\  *(readonly)*

   .. py:class:: BudgetDataProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.BudgetDataProperty;

         .. code-tab:: javascript

            // CfnBudget.BudgetDataProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.BudgetDataProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: budgetType

         `CfnBudget.BudgetDataProperty.BudgetType`



         :type: string *(readonly)*


      .. py:attribute:: timeUnit

         `CfnBudget.BudgetDataProperty.TimeUnit`



         :type: string *(readonly)*


      .. py:attribute:: budgetLimit

         `CfnBudget.BudgetDataProperty.BudgetLimit`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.SpendProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: budgetName

         `CfnBudget.BudgetDataProperty.BudgetName`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: costFilters

         `CfnBudget.BudgetDataProperty.CostFilters`



         :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: costTypes

         `CfnBudget.BudgetDataProperty.CostTypes`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.CostTypesProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: timePeriod

         `CfnBudget.BudgetDataProperty.TimePeriod`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.TimePeriodProperty`\  *(optional)* *(readonly)*


   .. py:class:: CostTypesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.CostTypesProperty;

         .. code-tab:: javascript

            // CfnBudget.CostTypesProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.CostTypesProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: includeCredit

         `CfnBudget.CostTypesProperty.IncludeCredit`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: includeDiscount

         `CfnBudget.CostTypesProperty.IncludeDiscount`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: includeOtherSubscription

         `CfnBudget.CostTypesProperty.IncludeOtherSubscription`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: includeRecurring

         `CfnBudget.CostTypesProperty.IncludeRecurring`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: includeRefund

         `CfnBudget.CostTypesProperty.IncludeRefund`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: includeSubscription

         `CfnBudget.CostTypesProperty.IncludeSubscription`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: includeSupport

         `CfnBudget.CostTypesProperty.IncludeSupport`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: includeTax

         `CfnBudget.CostTypesProperty.IncludeTax`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: includeUpfront

         `CfnBudget.CostTypesProperty.IncludeUpfront`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: useAmortized

         `CfnBudget.CostTypesProperty.UseAmortized`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: useBlended

         `CfnBudget.CostTypesProperty.UseBlended`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:class:: NotificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.NotificationProperty;

         .. code-tab:: javascript

            // CfnBudget.NotificationProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.NotificationProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: comparisonOperator

         `CfnBudget.NotificationProperty.ComparisonOperator`



         :type: string *(readonly)*


      .. py:attribute:: notificationType

         `CfnBudget.NotificationProperty.NotificationType`



         :type: string *(readonly)*


      .. py:attribute:: threshold

         `CfnBudget.NotificationProperty.Threshold`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


      .. py:attribute:: thresholdType

         `CfnBudget.NotificationProperty.ThresholdType`



         :type: string *(optional)* *(readonly)*


   .. py:class:: NotificationWithSubscribersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.NotificationWithSubscribersProperty;

         .. code-tab:: javascript

            // CfnBudget.NotificationWithSubscribersProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.NotificationWithSubscribersProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: notification

         `CfnBudget.NotificationWithSubscribersProperty.Notification`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.NotificationProperty`\  *(readonly)*


      .. py:attribute:: subscribers

         `CfnBudget.NotificationWithSubscribersProperty.Subscribers`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.SubscriberProperty`\ )[] *(readonly)*


   .. py:class:: SpendProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.SpendProperty;

         .. code-tab:: javascript

            // CfnBudget.SpendProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.SpendProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: amount

         `CfnBudget.SpendProperty.Amount`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


      .. py:attribute:: unit

         `CfnBudget.SpendProperty.Unit`



         :type: string *(readonly)*


   .. py:class:: SubscriberProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.SubscriberProperty;

         .. code-tab:: javascript

            // CfnBudget.SubscriberProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.SubscriberProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: address

         `CfnBudget.SubscriberProperty.Address`



         :type: string *(readonly)*


      .. py:attribute:: subscriptionType

         `CfnBudget.SubscriberProperty.SubscriptionType`



         :type: string *(readonly)*


   .. py:class:: TimePeriodProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Budgets;

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.CfnBudget.TimePeriodProperty;

         .. code-tab:: javascript

            // CfnBudget.TimePeriodProperty is an interface

         .. code-tab:: typescript

            import { CfnBudget.TimePeriodProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: end

         `CfnBudget.TimePeriodProperty.End`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: start

         `CfnBudget.TimePeriodProperty.Start`



         :type: string *(optional)* *(readonly)*



   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnBudgetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnBudgetProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Budgets;

      .. code-tab:: java

         import software.amazon.awscdk.services.budgets.CfnBudgetProps;

      .. code-tab:: javascript

         // CfnBudgetProps is an interface

      .. code-tab:: typescript

         import { CfnBudgetProps } from '@aws-cdk/aws-budgets';



   Properties for defining a `AWS::Budgets::Budget`





   .. py:attribute:: budget

      `AWS::Budgets::Budget.Budget`



      :type: :py:class:`~@aws-cdk/aws-budgets.CfnBudget.BudgetDataProperty`\  or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:attribute:: notificationsWithSubscribers

      `AWS::Budgets::Budget.NotificationsWithSubscribers`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-budgets.CfnBudget.NotificationWithSubscribersProperty`\ )[] *(optional)* *(readonly)*


